Make the Redis client integration test an example

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
+.ruby-version
+.ruby-gemset
+.rvmrc
 /coverage
 /benchmark
 /tmp
 /doc
 /.yardoc
 /TODO.md
-/.ruby-version
-/.ruby-gemset
-/.rvmrc
 /tags
 /pkg
