--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-script: bundle exec rake spec:all
+script: bundle exec rake spec
 bundler_args: --without development
 services:
   - redis-server
